--- a/index.html
+++ b/index.html
@@ -4,38 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0", maximum-scale=1.0,  minimun-scale=1.0">
-    <title>Flex Box Ejercicio 1 pas 3</title>
+    <script src="https://kit.fontawesome.com/da815974b9.js" crossorigin="anonymous"></script> 
+    <title>GRID</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <div class="padre">
-            <header class="header">
-                <div class="menu">
-                    <div class="logo"></div>
-                    <div class="nav"></div>
-                    <div class="social"></div>
-                </div>
-                <div class="texto-principal">
-                    <h1></h1>
+        <main>
+            <header> 
+               <div class="menu">
+                    <div class="logo">
+                        <!-- <img src="images/logo.png"> -->
+                    </div>
+                    <div class="nav">
+                        <ul>
+                            <li ><a href="#"title="Inicio" ><i class="icon fas fa-home"></i>Inicio</a></li>
+                            <li><a href="#" title="Rutas"><i class="icon fas fa-road"></i></i>Rutas</a></li>
+                            <li><a href="#" title="Hoteles"><i class=" fas fas fa-h-square"></i>Hoteles</a></li>
+                            <li><a href="#" title="Vuelos"><i class="icon fas fa-plane"></i>Vuelos</a></li>
+                            <li> <a href="#" title="Contactos"><i class="icon fas fa-envelope"></i>Contacto</a></li>
+                        </ul>
+                    </div>
+                    <div class="social">
+                        <a href="#" title="twitter"><i class="icon rotate fab fa-twitter-square"></i></a>
+                        <p></p>
+                        <a href="#" title="facebook"><i class="icon rotate fab fa-facebook-square"></i></a>
+                    </div>          
+                    <div class="texto-principal">
+                        <h1>"Disfruta de la experencia de otros viajeros"</h1>
+                    </div>
                 </div>
             </header>
-        <section class="section">
-            <div class="articulos">
-            <article class="article"></article>
-            <article class="article"></article>
-            <article class="article"></article>
-            <article class="article"></article>
-            <nav class="navegacion"></nav>
-            </div>
-            <aside class="aside">
-                <div class="publicidad"></div>
-                <div class="publicidad"></div>
-            </aside>
-        </section>
-        <footer class="footer">
-            <nav class="pie"></nav>
-        </footer>
-    </div>
 
-</body>
+
+
+            <article>Contenido</article>
+            <aside>aside</aside>
+            <footer>Foooter</footer>
+        </main> 
+    </body>
 </html>
+
