--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/da815974b9.js" crossorigin="anonymous"></script> 
     <title>GRID</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="scripts/desplegar.js"></script>
 </head>
 <body>
         <main>
@@ -37,9 +38,103 @@
 
 
 
-            <article>Contenido</article>
-            <aside>aside</aside>
-            <footer>Foooter</footer>
+            <article>
+                <section class="section">
+                   <div class="articulos">
+                        <article class="article">
+                            <div class="caja">
+                                <img src="images/japon1.jpg"> 
+                                <p class="textoImagen">30 de Marzo de 2021</p>
+                                <p class="textoImagen2">PAISAJES</p></img>
+                            </div>
+                            <p>
+                                Un águila y una zorra que eran muy amigas decidieron vivir juntas 
+                                con la idea de que eso reforzaría su amistad. Entonces el águila escogió 
+                                un árbol muy elevado para poner allí sus huevos, mientras que la zorra soltó 
+                                a sus hijos bajo unas zarzas sobre la tierra al pie del mismo árbol. 
+                                Un día que la zorra salió a buscar su comida, el águila, que estaba 
+                                hambrienta cayó sobre las zarzas, se llevó a los zorruelos, y entonces ella 
+                                y sus crías se regozijaron con un banquete. 
+                                <a href="#" onclick="vermas('mas');" id="mas">... [leer más]</a>
+                                </p>
+                                <p id="desplegar" style="display:none;">
+                                Regresó la zorra y más le dolió el no poder vengarse, que saber de la 
+                                muerte de sus pequeños; ¿Cómo podría ella, siendo un animal terrestre,
+                                sin poder volar, perseguir a uno que vuela? Tuvo que conformarse con
+                                el usual consuelo de los débiles e impotentes: maldecir desde lejos
+                                a su enemigo.
+                                <br />
+                                Mas no pasó mucho tiempo para que el águila recibiera el pago de su 
+                            traición contra la amistad. Se encontraban en el campo unos pastores
+                                sacrificando una cabra; cayó el águila sobre ella y se llevó 
+                                una víscera que aún conservaba fuego, colocándola en su nido. 
+                                Vino un fuerte viento y transmitió el fuego a las pajas, ardiendo 
+                                también sus pequeños aguiluchos, que por pequeños aún no sabían volar, 
+                                los cuales se vinieron al suelo. Corrió entonces la zorra, y tranquilamente
+                                devoró a todos los aguiluchos ante los ojos de su enemiga. <br />
+                                <b>“Nunca traiciones la amistad sincera, pues si lo hicieras, tarde 
+                                o temprano del cielo llegará el castigo”.</b>
+                                <a href="#" onclick="vermas('menos');" id="menos">... [leer menos]</a>
+                                </p> 
+                        </article>
+                        <article class="article">  
+                            <div class="caja">
+                                <img src="images/japon2.jpg"> 
+                                <p class="textoImagen">3 de Marzo de 2021</p>
+                                <p class="textoImagen2">CULTURA</p></img>
+                            </div>
+                            <p>
+                                Un águila y una zorra que eran muy amigas decidieron vivir juntas 
+                                con la idea de que eso reforzaría su amistad. Entonces el águila escogió 
+                                un árbol muy elevado para poner allí sus huevos, mientras que la zorra soltó 
+                                a sus hijos bajo unas zarzas sobre la tierra al pie del mismo árbol. 
+                                Un día que la zorra salió a buscar su comida, el águila, que estaba 
+                                hambrienta cayó sobre las zarzas, se llevó a los zorruelos, y entonces ella 
+                                y sus crías se regozijaron con un banquete. 
+                                <a href="#" onclick="vermas2('mas2');" id="mas2">... [leer más]</a>
+                                </p>
+                                <p id="desplegar2" style="display:none;">
+                                Regresó la zorra y más le dolió el no poder vengarse, que saber de la 
+                                muerte de sus pequeños; ¿Cómo podría ella, siendo un animal terrestre,
+                                sin poder volar, perseguir a uno que vuela? Tuvo que conformarse con
+                                el usual consuelo de los débiles e impotentes: maldecir desde lejos
+                                a su enemigo.
+                                <br />
+                                Mas no pasó mucho tiempo para que el águila recibiera el pago de su 
+                            traición contra la amistad. Se encontraban en el campo unos pastores
+                                sacrificando una cabra; cayó el águila sobre ella y se llevó 
+                                una víscera que aún conservaba fuego, colocándola en su nido. 
+                                Vino un fuerte viento y transmitió el fuego a las pajas, ardiendo 
+                                también sus pequeños aguiluchos, que por pequeños aún no sabían volar, 
+                                los cuales se vinieron al suelo. Corrió entonces la zorra, y tranquilamente
+                                devoró a todos los aguiluchos ante los ojos de su enemiga. <br />
+                                <b>“Nunca traiciones la amistad sincera, pues si lo hicieras, tarde 
+                                o temprano del cielo llegará el castigo”.</b>
+                                <a href="#" onclick="vermas2('menos2');" id="menos2">... [leer menos]</a>
+                                </p> 
+                        </article>
+                    <article class="article"> 
+                        <img src="images/japon3.jpg">
+                    </article>
+                    <article class="article"> 
+                        <img src="images/japon4.jpg">
+                    </article>
+                    </div>
+                    
+                </section>
+            </article>
+            <aside class="aside">
+                <div class="publicidad">
+                    <img src="images/publicidad1.jpg">
+                </div>
+                <div class="publicidad">
+                    <img src="images/publicidad2.webp">
+                </div>
+            </aside>
+            <footer class="footer">
+            
+                <nav class="pie"><p>Javier  2021</p></nav>
+            </footer>
         </main> 
     </body>
 </html>
